# pdns-api-scripts

./: .gitignore  CMakeLists.txt  README.md
debian/: changelog  control  copyright  pdns-api-scripts-test.install  pdns-api-scripts.install
sbin/: CMakeLists.txt  create-pdns-zone.sh  create_update-pdns-a-record.sh  create_update-pdns-cname-record.sh  create_update-pdns-ptr-record  create_update-pdns-ptr-record.sh  delete-pdns-a-record.sh  delete-pdns-cname-record.sh  delete-pdns-ptr-record  delete-pdns-ptr-record.sh  delete-pdns-zone  delete-pdns-zone.sh
scratch/: notes.md
share/: CMakeLists.txt  pdns-api-script-functions.sh
share/man/man1/: CMakeLists.txt  create-pdns-zone.1
share/pdns-api-scripts/: CMakeLists.txt  pdns-api-script-functions.sh
share/pdns-api-scripts/test/: CMakeLists.txt  pdns-api-test-functions.sh  test_create_delete_zone.sh  test_create_update_delete_a_record.sh  test_create_update_delete_cname_record.sh  test_create_update_delete_ptr_record.sh
share/test/: CMakeLists.txt  placeholder.sh  setup_and_teardown.sh  test_create_delete_zone.sh
test/: CMakeLists.txt  pdns-api-test-functions.sh  setup_and_teardown.sh  test_all.sh  test_create_delete_zone.sh  test_create_update_delete_a_record.sh  test_create_update_delete_cname_record.sh  test_create_update_delete_ptr_record.sh
